# cis194

./: HSpecTests.hs  README.md  cis194.cabal
week01/: Homework1.hs
week02/: LogAnalysis.hs
week03/: Golf.hs
week04/: Homework4.hs
week05/: Calc.hs  VarExprT.hs
week06/: Fibonacci.hs
